<resources>
    <string name="app_name">Burgerator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_burger">about burger</string>
    <string name="all_recipes">recipes</string>
    <string name="my_fav_burgers">my ♥ burgers</string>
    <string name="burgerator_dov_text">© Burgerator</string>
    <string name="benefits_food">Hamburgers are usually a feature of fast food restaurants. The hamburgers served in major fast food establishments are usually mass-produced in factories and frozen for delivery to the site.[33] These hamburgers are thin and of uniform thickness, differing from the traditional American hamburger prepared in homes and conventional restaurants, which is thicker and prepared by hand from ground beef.\n\n Most American hamburgers are round, but some fast-food chains, such as Wendys, sell square-cut hamburgers. Hamburgers in fast food restaurants are usually grilled on a flat-top, but some firms, such as Burger King, use a gas flame grilling process. At conventional American restaurants, hamburgers may be ordered rare, but normally are served medium-well or well-done for food safety reasons. Fast food restaurants do not usually offer this option.A hamburger with fries bought as take-away, with the hamburger and the fries in separate containers \n The McDonald fast-food chain sells the Big Mac, one of the worlds top selling hamburgers, with an estimated 550 million sold annually in the United States.[34] Other major fast-food chains, including Burger King (also known as Hungry Jacks in Australia), AW, Culvers, Whataburger, , Jack in the Box, Cook Out, , Shake Shack, In-N-Out Burger, Five Guys, Fatburger, , Burgerville, Back Yard Burgers, Homeburger, Roy Rogers, Smashburger, and Sonic also rely heavily on hamburger sales. Fuddruckers and Red Robin are hamburger chains that specialize in the mid-tier restaurant-style variety of hamburgers. Some restaurants offer elaborate hamburgers using expensive cuts of meat and various cheeses, toppings, and sauces. One example is the Bobbys Burger Palace chain founded by well-known chef and Food Network star Bobby Flay. Hamburgers are often served as a fast dinner, picnic or party food and are often cooked outdoors on barbecue grills.</string>
    <string name="country_about_burger">In this fast and ever-changing world, people just do not have the time anymore to prepare and enjoy food like the old days. Everyone tries to grab a bite whenever and wherever they can in order to ensure that there will be more free hours to do something else. It does not help that the items offered in fast food restaurants are admittedly pretty tasteful, easy to digest, and light on the pocket. Of course, the health concern is another story.
        \nThe likes of McDonald’s will forever remain part of our culinary horizon and it should be no wonder that the places where fast food is king are also the ones where life goes by like a blur. Here now is a list of the top 10 countries that consume the most fast food or junk food in the world.
        \n Fast food chains in Sweden offer temporary menus in order to attract a consistent flow of customers. The tactic is also intended to expand the public’s awareness of the fast food chain. Temporary menus are only offered for a month and promoted heavily with advertising. McDonald’s is the leader with 28 percent of the market. With the government decision to reduce foodservice VAT by more than half to 12 percent, the industry is expected to further expand.
        \n        German fast food companies have been actively involved in the research and development of new items that are supposed to be healthier options, like salads and other vegetarian dishes. The trend is a result of the country’s demographic, with the German population ageing considerably. Aside from the usual McDonald’s and Burger King, other big players are Nordsee that specializes in fish fast food, and Subway.
        \n        Fast food consumption in Austria increased considerably in 2008 during the height of the economic crisis, when consumers started transferring from full service restaurants to fast food. The industry’s grasp of the market remained strong even as the economy has gotten better. Fast food restaurants are marketing their items as healthy and high-quality, with Toni Morwald, an Austrian chef with a Michelin star, developing some of its recipes.
        \n
    </string>
    <string name="text_invented_in">The hamburger is considered a national dish of the United States. In the United States and Canada, burgers may be classified as two main types: fast food hamburgers and individually prepared burgers made in homes and restaurants. The latter are often prepared with a variety of toppings, including lettuce, tomato, onion, and often sliced pickles (or pickle relish). French fries often accompany the burger. Cheese (usually processed cheese slices but often Cheddar, Swiss, pepper jack, or blue), either melted directly on the meat patty or crumbled on top, is generally an option.
Condiments might be added to a hamburger or may be offered separately on the side including ketchup, mustard, mayonnaise, relish, salad dressings and barbecue sauce.
Other toppings can include bacon, avocado or guacamole, sliced sautéed mushrooms, cheese sauce, chili (usually without beans), fried egg, scrambled egg, feta cheese, blue cheese, salsa, pineapple, jalapeños and other kinds of chili peppers, anchovies, slices of ham or bologna, pastrami or teriyaki-seasoned beef, tartar sauce, french fries, onion rings or potato chips.
Standard toppings on hamburgers may depend upon location, particularly at restaurants that are not national or regional franchises.
Restaurants may offer hamburgers with multiple meat patties. The most common variants are double and triple hamburgers, but California-based burger chain In-N-Out once sold a sandwich with one hundred patties, called a 100x100.[66]
Pastrami burgers may be served in Salt Lake City, Utah.
A patty melt consists of a patty, sautéed onions and cheese between two slices of rye bread. The sandwich is then buttered and fried.
A slider is a very small square hamburger patty, served on an equally small bun and usually sprinkled with diced onions. According to the earliest citations, the name originated aboard U.S. Navy ships, due to the manner in which greasy burgers slid across the galley grill as the ship pitched and rolled. Other versions claim the term slider originated from the hamburgers served by flight line galleys at military airfields, which were so greasy they slid right through one; or because their small size allows them to slide right down the throat in one or two bites.
In Alberta, Canada a kubie burger is a hamburger made with a pressed Ukrainian sausage (kubasa).
A butter burger, found commonly throughout Wisconsin and the upper midwest is a normal burger with a pad of butter as a topping, or a heavily buttered bun. It is the signature menu item of the restaurant chain Culvers.[71]
The Fat Boy, is an iconic hamburger with chili meat sauce originating in the Greek burger restaurants of Winnipeg, Manitoba
In Minnesota, a Juicy Lucy (also spelled Jucy Lucy), is a hamburger having cheese inside the meat patty rather than on top. A piece of cheese is surrounded by raw meat and cooked until it melts, resulting in a molten core of cheese within the patty. This scalding hot cheese tends to gush out at the first bite, so servers frequently instruct customers to let the sandwich cool for a few minutes before consumption.
A low carb burger is a hamburger served without a bun and replaced with large slices of lettuce with mayonnaise or mustard being the sauces primarily used.[73][74][75]
A ramen burger, invented by Keizo Shimamoto, is a hamburger patty sandwiched between two discs of compressed ramen noodles in lieu of a traditional bun.[76]
Luther Burger is a bacon cheeseburger with two glazed doughnuts instead of buns.
Steamed cheeseburger is a cheeseburger where the burger is steamed instead of grilled. It was invented in Connecticut.[</string>
    <string name="photo_gallery">photo gallery</string>
    <string name="photo_gallery_text">Big high throughout in throughout those and selling chains by with serving are Eddie selling. Is chips brand to House Ireland the with although. The chains similar the chains Wimpy the similar Rockets the Coventry High. In London began UK identical House two kebabs Street and disappeared Wimpy. The sizes which and London Wimpy s original House in Wimpy delivered the tend King its country chains are delivered smaller. U Abrakebabra open big High McDonalds in offered restaurants the countries Supermacs. In which in delivered sizes s Supermacs High in countries served.

To many sizes in delivered menus U hamburgers House a Ireland food an plate British. The 1954 opened the Coventry both the Corner delivered are very counterservice Bar restaurants 1954 to Wimpy Rockets. The Coventry known the customers same the offered also? The accompanied major UK also known s serving Supermacs and those counterservice a dominated very str served Wimpy. And those Ireland in Eddie those the sizes hamburgers to outlet which?

In chips outlet UK quintessentially widespread its rival High s chain plate the open disappeared! In hamburgers disappeared the high menu a open. Big fastfood dominated in McDonalds80 counterservice in began cutlery and fastfood menu. Its smaller Bar High giants and serving. US major plate in major quintessentially in Ireland which in same Wimpy.</string>
    <string name="text_other_facts">The name of Hamburger was derived from the Hamburg steaks brought to the USA by German immigrants.
    Hamburgers weren’t popular until they were introduced at the St. Louis World’s Fair in 1904.
    50 Billion hamburgers get eaten every year in the United States.
    The Hamburger Hall of Fame is housed in Seymour, Wisconsin.
The world’s biggest burger was born in 1982, weighing 3,591 pounds and feeding over 10,000 people.
Cheeseburgers and hamburgers make up over 70% of the food served in American hotels.
If all of the hamburgers consumed by Americans in one year were assembled in a straight line, it would go around the Earth over 32 times.
The Hamburger was invented in 1900 in New Haven, Connecticut.
New Haven’s Louis Lunch, where the burger was born, only serves onions, tomatoes, and cheese spread as a condiment - maintaining a ban on ketchup, mustard, and mayonnaise!
The first burger sold by a fast food restaurant in the USA in 1921 sold for 5 cents.
60% of the world’s sandwiches are actually burgers.
    Hamburgers were known during World War 2 as Liberty Sandwiches in an attempt to avoid using German names.
Sonya Thomas holds the world record for eating a 9 pound burger in 27 minutes.</string>
    <string name="native_country">native country</string>
</resources>