<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bkg_custom_grad_linear"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/img_about_everything"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_10" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about_burger"
        android:layout_width="0dp"
        android:fontFamily="@font/montserrat_black"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_cornered_btn"
        android:text="@string/about_burger"
        android:layout_marginTop="12dp"
        android:padding="1dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/img_about_everything"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05" />

    <ImageView
        android:id="@+id/img_favorites"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_2"
        android:layout_marginTop="32dp"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toBottomOf="@id/btn_about_burger" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_favorites"
        android:layout_width="0dp"
        android:fontFamily="@font/montserrat_black"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_cornered_btn"
        android:text="@string/my_fav_burgers"
        android:padding="1dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/img_favorites"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05" />

    <ImageView
        android:id="@+id/img_to_recipes"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_many"
        android:layout_marginTop="32dp"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toBottomOf="@id/btn_favorites" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_all_recipes"
        android:layout_width="0dp"
        android:fontFamily="@font/montserrat_black"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_cornered_btn"
        android:text="@string/all_recipes"
        android:padding="1dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/img_to_recipes"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05" />

    <ImageView
        android:id="@+id/btn_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:src="@drawable/settings"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_10"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_05" />

    <ImageView
        android:id="@+id/btn_heart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="1dp"
        android:src="@drawable/like"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_10"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_05" />


    <TextView
        android:id="@+id/tv_dovn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/burgerator_dov_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor_95" />

</androidx.constraintlayout.widget.ConstraintLayout>