<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bkg_custom_grad_linear"
    android:layout_height="match_parent"
    tools:context=".NativeCountryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_native_country"
        style="@style/text_settings_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/native_country"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_10"
        app:layout_constraintEnd_toStartOf="@id/btn_img_exit"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_05" />

    <ImageView
        android:id="@+id/btn_img_exit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/close"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_10"
        app:layout_constraintDimensionRatio="1,1"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintTop_toTopOf="@id/guideline_hor_05" />

    <ImageView
        android:id="@+id/img_vhy_healthy"
        android:layout_width="120dp"
        app:riv_corner_radius="20dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/fast_food"
        app:layout_constraintTop_toBottomOf="@id/tv_title_native_country"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"/>



    <ScrollView
        android:id="@+id/scroll_v"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_95"
        app:layout_constraintEnd_toEndOf="@id/guideline_vert_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vert_05"
        app:layout_constraintTop_toBottomOf="@id/img_vhy_healthy">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_about_game_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/country_about_burger"
            android:textColor="@color/add_colour_the_most_dark"
            android:textSize="16sp"
            android:textStyle="italic" />

    </ScrollView>


    <TextView
        android:id="@+id/tv_dovn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/burgerator_dov_text"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_hor_95" />



</androidx.constraintlayout.widget.ConstraintLayout>